src/objects/GL_Code__c.object
<CustomObject>
    <description>Code table that Stores all expense related GL Codes and their descriptions.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Internal comments for Caesars team to add comments to the GL code record.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provides Description of the GL Code</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <externalId>true</externalId>
        <label>GL Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GL Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GL_Code__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GL - {0000}</displayFormat>
        <label>GL Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>